--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <nav>
         <div class="container main-nav flex">
             <a href="#" class="company-logo">
-                <img src="./assets/company-logo.png" alt="company-logo">
+                <img src="company-logo.png" alt="company-logo">
             </a>
             <div class="nav-links">
                 <ul class="flex">
@@ -52,7 +52,7 @@
                 <a href="#" class="primary-button get-started-btn">Get Started</a>
             </div>
             <div class="header-right">
-                <img src="./assets/hero.png" alt="Hero">
+                <img src="hero.png" alt="Hero">
             </div>
         </div>
     </header>
@@ -64,13 +64,13 @@
             <div class="small-bold-text companies-header">The world’s best companies rely on UsabilityHub to make better
                 design decisions.</div>
             <div class="logos flex">
-                <img src="./assets/amazon.png" class="logo" alt="">
-                <img src="./assets/google.png" class="logo" alt="">
-                <img src="./assets/5b46e8e6a0fccf20fed815e3_logo_taskrabbit.png" class="logo" alt="">
-                <img src="./assets/5b46e8e6ee75f135fc390ab6_logo_airtable.png" class="logo" alt="">
-                <img src="./assets/5b46e726c3102cf1ebf0c2c0_logo_box.png" class="logo" alt="">
-                <img src="./assets/5f7fda34692422757a1b3768_godaddy.svg" class="logo" alt="">
-                <img src="./assets/5b46e726a09814d84e5a21c2_logo_asana.png" class="logo" alt="">
+                <img src="amazon.png" class="logo" alt="">
+                <img src="google.png" class="logo" alt="">
+                <img src="5b46e8e6a0fccf20fed815e3_logo_taskrabbit.png" class="logo" alt="">
+                <img src="5b46e8e6ee75f135fc390ab6_logo_airtable.png" class="logo" alt="">
+                <img src="5b46e726c3102cf1ebf0c2c0_logo_box.png" class="logo" alt="">
+                <img src="5f7fda34692422757a1b3768_godaddy.svg" class="logo" alt="">
+                <img src="5b46e726a09814d84e5a21c2_logo_asana.png" class="logo" alt="">
             </div>
         </div>
     </section>
@@ -85,37 +85,37 @@
             </div>
             <div class="features-area flex">
                 <div class="features-card flex">
-                    <img src="./assets/6355e6254d0d41e7d3aa16c0_card-sorting.svg" alt="">
+                    <img src="6355e6254d0d41e7d3aa16c0_card-sorting.svg" alt="">
                     <h3>Card Sorting</h3>
                     <p>Discover how people group and label information.</p>
                     <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-right-long"></i></a>
                 </div>
                 <div class="features-card flex">
-                    <img src="./assets/619f1c2ab5d65ddab8ae52db_prototype-testing.svg" alt="">
+                    <img src="619f1c2ab5d65ddab8ae52db_prototype-testing.svg" alt="">
                     <h3>Prototype tests</h3>
                     <p>Discover how people navigate your Figma prototypes.</p>
                     <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-right-long"></i></a>
                 </div>
                 <div class="features-card flex">
-                    <img src="./assets/6101f41d07abfa81f8f57cde_click-analysis.svg" alt="">
+                    <img src="6101f41d07abfa81f8f57cde_click-analysis.svg" alt="">
                     <h3>First click tests</h3>
                     <p>Test interaction with first click and navigation tests.</p>
                     <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-right-long"></i></a>
                 </div>
                 <div class="features-card flex">
-                    <img src="./assets/6101f41d07abfa567af57cc3_surveys.svg" alt="">
+                    <img src="6101f41d07abfa567af57cc3_surveys.svg" alt="">
                     <h3>Design surveys</h3>
                     <p>Get feedback on images, videos or audio files.</p>
                     <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-right-long"></i></a>
                 </div>
                 <div class="features-card flex">
-                    <img src="./assets/6101f41d07abfa0fd5f57cd6_Head icon.svg" alt="">
+                    <img src="6101f41d07abfa0fd5f57cd6_Head icon.svg" alt="">
                     <h3>Preference tests</h3>
                     <p>Find out which designs users prefer and why.</p>
                     <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-right-long"></i></a>
                 </div>
                 <div class="features-card flex">
-                    <img src="./assets/6101f41d07abfaefeaf57cd8_five-second-test.svg" alt="">
+                    <img src="6101f41d07abfaefeaf57cd8_five-second-test.svg" alt="">
                     <h3>Five second tests</h3>
                     <p>Test comprehensibility by measuring first impressions.</p>
                     <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-right-long"></i></a>
@@ -129,7 +129,7 @@
     <section class="big-features-section">
         <div class="container flex big-features-container">
             <div class="feature-img">
-                <img src="./assets/5b44330a05b1ce09edcc052e_home_designer.png" alt="">
+                <img src="5b44330a05b1ce09edcc052e_home_designer.png" alt="">
             </div>
             <div class="feature-desc flex">
                 <h4>Effortless validation for</h4>
@@ -148,7 +148,7 @@
                 <p>Fine-tune landing pages, messaging, and creative, helping you optimise conversion rates on marketing campaigns and product launches.</p>
             </div>
             <div class="feature-img">
-                <img src="./assets/5b44330a6c5dba54a973c215_home_marketer.png" alt="">
+                <img src="5b44330a6c5dba54a973c215_home_marketer.png" alt="">
             </div>
         </div>
     </section>
@@ -156,7 +156,7 @@
     <section class="big-features-section">
         <div class="container flex big-features-container">
             <div class="feature-img">
-                <img src="./assets/5b44330a049e86cae8ae66e5_home_manager.png" alt="">
+                <img src="5b44330a049e86cae8ae66e5_home_manager.png" alt="">
             </div>
             <div class="feature-desc flex">
                 <h4>Easier decision making for</h4>
@@ -178,15 +178,15 @@
                 <a href="#" class="examples-card">
                    <h3 class="card-text">Can users complete a task in my software interface?</h3>
                 </a>
-                <a href="#" class="examples-card" style="background: linear-gradient(rgb(0,0,0,0.1),rgb(0,0,0,0.8)) ,url(./assets/5b48581f238eb652d84d356f_cover_navigate.jpg);background-position: center;
+                <a href="#" class="examples-card" style="background: linear-gradient(rgb(0,0,0,0.1),rgb(0,0,0,0.8)) ,url(5b48581f238eb652d84d356f_cover_navigate.jpg);background-position: center;
                 background-size: 300px;">
                    <h3 class="card-text">Can users find important pages on my website?</h3>
                 </a>
-                <a href="#" class="examples-card" style="background: linear-gradient(rgb(0,0,0,0.1),rgb(0,0,0,0.8)) ,url(./assets/5b485751238eb68a594d3555_cover_audience.jpg);background-position: center;
+                <a href="#" class="examples-card" style="background: linear-gradient(rgb(0,0,0,0.1),rgb(0,0,0,0.8)) ,url(5b485751238eb68a594d3555_cover_audience.jpg);background-position: center;
                 background-size: 300px;">
                    <h3 class="card-text">Is my website's intended audience is clear?</h3>
                 </a>
-                <a href="#" class="examples-card" style="background: linear-gradient(rgb(0,0,0,0.1),rgb(0,0,0,0.8)) ,url(./assets/5b48587a238eb690dd4d3577_cover_about.jpg);background-position: center;
+                <a href="#" class="examples-card" style="background: linear-gradient(rgb(0,0,0,0.1),rgb(0,0,0,0.8)) ,url(5b48587a238eb690dd4d3577_cover_about.jpg);background-position: center;
                 background-size: 300px;">
                    <h3 class="card-text">Do visitors understand what a page is about?</h3>
                 </a>
@@ -209,7 +209,7 @@
     <footer>
         <div class="container flex footer-container">
          <a href="#" class="company-logo">
-            <img src="./assets/company-logo.png" alt="">
+            <img src="company-logo.png" alt="">
          </a>
          <div class="link-column flex">
             <h4>Product</h4>
